--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,9 @@
-theme: jekyll-theme-cayman
+theme: eliottvincent/bay
+
+header:
+  pages:
+    - name: Home
+      slug: /     # <-- index.md
+    - name: Teaching  # <-- blog.md
+    - name: Research  # <-- whatever.md
+    
