--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: /nvaskou/bay
+theme: nvaskou/bay
 title: Nicolas
 
 header:
@@ -8,3 +8,6 @@ header:
     - name: Teaching  # <-- blog.md
     - name: Research  # <-- whatever.md
     
+footer:
+footer:
+  show_powered_by: false
